--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ sphinx = "^3.4.3"
 sphinx-notfound-page = "^0.5"
 sphinx-book-theme = "^0.0.39"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 sphinx-autobuild = "^0.7.1"
 
 [build-system]
