--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "Programmation en Python"
 authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-sphinx = "^3.4.3"
-sphinx-notfound-page = "^0.5"
-sphinx-book-theme = "^0.0.39"
+python = "^3.11"
+sphinx = "^6.0"
+sphinx-notfound-page = "^1.0"
+sphinx-book-theme = "1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 sphinx-autobuild = "^0.7.1"
